--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.1.2
   shared_preferences: ^2.3.2
+  image: ^3.0.1
 
 dev_dependencies:
   flutter_test:
