--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.2
   image: ^3.0.1
+  intl: ^0.19.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets: 
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
